# mtg-image-downloader

./: .gitignore  Cargo.toml  flake.nix
src/: blocking.rs  lib.rs  nonblocking.rs
