[package]
name = "mtg-image-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = [] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.1"
flume = "0.10"
indicatif = "0.16.2"
